Rosario Student Information System - CHANGES

Changes in 2.8.2
----------------
- Bugfix unset modfunc even if no values posted
- adapt height if US Letter paper in HonorRoll.php & HonorRollSubject.php
- Bugfix wkhtmltopdf ContentOperationNotPermittedError in HonorRollSubject.php

Changes in 2.8.1
----------------
- Appify / add app to iOS / Android home screen in index.php & apple-touch-icon.png
- Add Select Parents email field facility in CreateParents.php
- Allow students to change their password by default in rosariosis.sql
- Bugfix cannot associate parents & students in AddUsers.php & AddStudents.php

Changes in 2.8
--------------
- Bugfix no payment displayed if no fee in Student_Billing/DailyTransactions.php
- Remove apostrophe + quotes escape in TEXTAREA in CreateParents.php, NotifyParents.php, Transcripts.php
- Create User/Student Account
- Add Registration in Configuration.php
- Move buttons from assets/ to theme folder
- Add HTML5 video ogv + webm formats in PortalNotes.php
- Add PorgramFunctions/README
- check PHP version + fix Referrals notifications in Portal.php
- Add Attendance Start Date this School Year + Grade Level in AssignOtherInfo.php
- Ask user if he wants absences and grades to be deleted when delete schedule in MassDrops.php & Schedule.php
- Better formatting for Labels in MailingLabels.php & StudentLabels.php
- Responsive table content in UnfilledRequests.php
- Add Help texts + spanish translation in Help_en.php & Help_es.php
- Remove inline CSS, program wide
- Add .student .staff .self .align-right .col1-align-right .bar .relevance .arrow.down .arrow.right CSS classes
- Add .center CSS class for tables
- Add <legend> CSS styling
- Remove "Display data using hidden fields" / HIDDEN Preference option
- Update french & spanish translations
- Session security in Warehouse.php & index.php
- Responsive MultiLanguages inputs in stylesheet.css
- Force School Configuration copy in CopySchool.php